# skills-runtime-sdk

./: .gitignore  AGENTS.md  DOCS_INDEX.md  README.cn.md  README.md  pytest.ini
docs/: worklog.md
docs_for_coding_agent/: 00-quickstart-offline.md  01-recipes.md  02-ops-and-qa.md  03-workflows-guide.md  DOCS_INDEX.md  README.md  capability-coverage-map.md  capability-inventory.md  cheatsheet.en.md  cheatsheet.zh-CN.md  common-pitfalls.md  local-strict-mode.md  task-contract.md  testing-strategy.md  workflows-applied-scenarios-18-20-22.md
examples/: README.md  __init__.py
examples/studio/mvp/backend/: pyproject.toml
examples/studio/mvp/backend/scripts/: dev.sh  pytest.sh
examples/studio/mvp/backend/src/studio_api/: app.py  approvals.py  skill_scaffold.py  skills_create.py  skills_overlay.py  sse.py  storage.py  timeutil.py
examples/studio/mvp/backend/tests/: test_approvals_hub.py  test_run_approvals_api.py  test_run_failed_error_kind_is_stable.py  test_sessions_delete.py  test_skills_create_api.py  test_sse_stream_jsonl.py  test_storage_resilience.py
help/: 00-overview.cn.md  00-overview.md  01-quickstart.cn.md  01-quickstart.md  02-config-reference.cn.md  02-config-reference.md  03-sdk-python-api.cn.md  03-sdk-python-api.md  04-cli-reference.cn.md  04-cli-reference.md  05-skills-guide.cn.md  05-skills-guide.md  06-tools-and-safety.cn.md  06-tools-and-safety.md  07-studio-guide.cn.md  07-studio-guide.md  08-architecture-internals.cn.md  08-architecture-internals.md  09-troubleshooting.cn.md  09-troubleshooting.md  10-cookbook.cn.md  10-cookbook.md  11-faq.md  (+13 more)
(+320 files in other folders)
